syntax = "proto3";

option java_package = "com.iquantex.ts.cre.data.process.message.protobuf";

option java_outer_classname = "REDataOpenFund";

// 开放式基金基本信息
message OpenFundInfo {
    // 基金内部编码
    string fundHcode = 1;
    // 基金全称
    string cname = 2;
    // 前端申购代码
    string purchaseFrcode = 3;
    // 发行日期
    int64 issueStdate = 4;
    // 资产规模
    double asset = 5;
    // 资产规模截止日
    int64 assetEndDate = 6;
    // 基金管理人
    string fundMgr = 7;
    // 基金类型
    string fundClassInvest = 8;
    // 成立日期
    int64 setupDate = 9;
    // 成立规模
    double setupShares = 10;
    // 基金托管人
    string fundCustod = 11;
    // 申购状态
    string purchaseStatus = 12;
    // 赎回状态
    string redeemStatus = 13;
    // 是否货币基金
    bool isMMF = 14;
    // 交易场所
    string marketCode = 15;
    // 运作模式
    string fundClassOper = 16;
    // 募集类型
    string fundClassRaise = 17;
    // 投资通道类型
    string fundClassChnl = 18;
}
